# Fastapi-postgres-todo

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  main.db  pyproject.toml
migrations/versions/: d95b1964abf1_init_tables.py
src/: config.py  constants.py  database.py  main.py  middleware.py  repository.py  schemas.py
src/auth/: backend.py  config.py  manager.py  middleware.py  models.py  routes.py  schemas.py  service.py
src/core/: config.py  constants.py  database.py  repository.py  schemas.py
src/core/repositories/: base.py  sqlalchemy.py
src/notes/: exceptions.py  models.py  routes.py  schemas.py  service.py
src/services/: tasks.py
src/tasks/: exceptions.py  handlers.py  routes.py  schemas.py  service.py  services.py
src/utils/: web.py
tests/: db.sqlite3
tests/e2e/: conftest.py  test_auth.py  test_notes.py  test_tasks.py  test_web.py
tests/integration/: conftest.py  test_repo.py  test_web.py
tests/notes/: test_schemas.py
tests/unit/: conftest.py  test_db.py  test_repo.py  test_schemas.py  test_web.py
